--- a/index.html
+++ b/index.html
@@ -12,5 +12,19 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Hostingo | Cloud Hosting For Everyone</title>
   </head>
-  <body></body>
+  <body>
+    <!-- Navbar -->
+    <div class="navbar">
+      <div class="container">
+        <h1 class="logo">Hostingo</h1>
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="features.html">Features</a></li>
+            <li><a href="docs.html">Docs</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </body>
 </html>
