--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <!-- Navbar -->
     <div class="navbar">
-      <div class="container">
+      <div class="container flex">
         <h1 class="logo">Hostingo</h1>
         <nav>
           <ul>
