--- a/index.html
+++ b/index.html
@@ -26,5 +26,20 @@
         </nav>
       </div>
     </div>
+
+    <!-- Showcase-->>
+    <section class="showcase">
+      <div class="container grid">
+        <div class="showcase-text">
+          <h1>Easier Deployment</h1>
+          <p>
+            Deploy web apps of all kinds, from large scale enterprise APIs to
+            static websites for individuals. Fill out the frm to try a demo of
+            our platform
+          </p>
+          <a href="features.html" class="btn btn-outline">Read More</a>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
