--- a/index.html
+++ b/index.html
@@ -39,6 +39,26 @@
           </p>
           <a href="features.html" class="btn btn-outline">Read More</a>
         </div>
+        <div class="showcase-form card">
+          <h2>Request a Demo</h2>
+          <form>
+            <div class="form-control">
+              <input type="text" name="name" placeholder="Name" required />
+            </div>
+            <div class="form-control">
+              <input
+                type="text"
+                name="company"
+                placeholder="Company Name"
+                required
+              />
+            </div>
+            <div class="form-control">
+              <input type="email" name="email" placeholder="Email" required />
+            </div>
+            <input type="submit" value="send" class="btn btn-primary" />
+          </form>
+        </div>
       </div>
     </section>
   </body>
