--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
     </div>
 
-    <!-- Showcase-->>
+    <!-- Showcase-->
     <section class="showcase">
       <div class="container grid">
         <div class="showcase-text">
